# hwloc

untitled/: CMakeLists.txt  main.c  main2.c~
untitled/test/: main2
